# sa-token-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_SUMMARY.md  README-FUTURE.md  README.md  README_zh-CN.md  test_token_styles
docs/: ARCHITECTURE.md  DISTRIBUTED_SESSION.md  ERROR_REFERENCE.md  EVENT_LISTENER.md  EVENT_LISTENER_QUICKSTART.md  EVENT_LISTENER_QUICKSTART_zh-CN.md  EVENT_LISTENER_zh-CN.md  JWT_GUIDE.md  JWT_GUIDE_zh-CN.md  MACROS.md  OAUTH2_GUIDE.md  OAUTH2_GUIDE_zh-CN.md  ONLINE_USER_MANAGEMENT.md  PermissionMatching.md  QUICK_START.md  README.md  README_zh-CN.md  SSO_GUIDE.md  StpUtil.md  StpUtil_zh-CN.md  WEBSOCKET_AUTH.md  项目介绍_zh-CN.md
examples/: README.md  distributed_session_example.rs  event_listener_example.rs  jwt_example.rs  oauth2_example.rs  security_features_example.rs  sso_example.rs  stp_util_example.rs  token_styles_example.rs  websocket_online_example.rs
examples/actix-web-example/: COMPLETE_TEST_REPORT.md  Cargo.toml  README.md  TEST_REPORT.md  run_test.sh  test.sh  test_all.sh  test_report.txt  verify_responses.sh
examples/actix-web-example/src/: auth.rs  conf.rs  main.rs  stp_util_demo.rs
examples/axum-full-example/: Cargo.toml  README.md  test.sh  快速开始.md  权限使用说明.md
examples/axum-full-example/src/: auth.rs  context_demo.rs  login_id_demo.rs  main.rs  permission.rs  stp_util_demo.rs
examples/poem-full-example/: Cargo.toml
examples/poem-full-example/src/: main.rs
sa-token-adapter/: Cargo.toml  README.md
sa-token-adapter/src/: context.rs  framework.rs  lib.rs  storage.rs  utils.rs
sa-token-core/: Cargo.toml  README.md  STPUTIL.md  StpUtil快速参考.md
sa-token-core/src/: config.rs  distributed.rs  error.rs  lib.rs  manager.rs  nonce.rs  oauth2.rs  online.rs  refresh.rs  sso.rs  util.rs  ws.rs
sa-token-core/src/context/: mod.rs
sa-token-core/src/event/: mod.rs
sa-token-core/src/permission/: mod.rs
sa-token-core/src/session/: mod.rs
sa-token-core/src/token/: generator.rs  jwt.rs  mod.rs  validator.rs
sa-token-macro/: Cargo.toml  MACRO_COMPLETE.md  README.md  STRUCTURE.md  TOKENSTREAM_GUIDE.md
sa-token-macro/examples/: basic_usage.rs
sa-token-macro/src/: lib.rs  utils.rs
sa-token-macro/src/macros/: check_login.rs  check_permission.rs  check_permissions_and.rs  check_permissions_or.rs  check_role.rs  check_roles_and.rs  check_roles_or.rs  ignore.rs  mod.rs
sa-token-plugin-actix-web/: Cargo.toml  README.md
sa-token-plugin-actix-web/src/: adapter.rs  extractor.rs  layer.rs  lib.rs  middleware.rs
sa-token-plugin-axum/: Cargo.toml  LAYER_IMPROVEMENT.md  README.md
sa-token-plugin-axum/src/: adapter.rs  extractor.rs  layer.rs  lib.rs  middleware.rs
sa-token-plugin-gotham/: Cargo.toml
sa-token-plugin-gotham/src/: adapter.rs  layer.rs  lib.rs  middleware.rs
sa-token-plugin-ntex/: Cargo.toml
sa-token-plugin-ntex/src/: adapter.rs  layer.rs  lib.rs  middleware.rs  state.rs
sa-token-plugin-poem/: Cargo.toml  FEATURE_SUMMARY.md  README.md
sa-token-plugin-poem/src/: adapter.rs  extractor.rs  layer.rs  lib.rs  middleware.rs  state.rs
sa-token-plugin-rocket/: Cargo.toml  README.md
sa-token-plugin-rocket/src/: adapter.rs  extractor.rs  layer.rs  lib.rs  middleware.rs  state.rs
sa-token-plugin-salvo/: Cargo.toml
sa-token-plugin-salvo/src/: adapter.rs  extractor.rs  layer.rs  lib.rs  middleware.rs
sa-token-plugin-tide/: Cargo.toml
sa-token-plugin-tide/src/: adapter.rs  extractor.rs  layer.rs  lib.rs  middleware.rs  state.rs
sa-token-plugin-warp/: Cargo.toml  README.md
sa-token-plugin-warp/src/: adapter.rs  extractor.rs  filter.rs  layer.rs  lib.rs  middleware.rs  state.rs
sa-token-storage-database/: Cargo.toml  README.md
sa-token-storage-database/src/: lib.rs
sa-token-storage-memory/: Cargo.toml  README.md
sa-token-storage-memory/src/: lib.rs
sa-token-storage-redis/: Cargo.toml  README.md
sa-token-storage-redis/src/: lib.rs
scripts/: publish_all.sh
src/: lib.rs
