[workspace]
members = [
    "sa-token-core",
    "sa-token-adapter",
    "sa-token-macro",
    "sa-token-storage-memory",
    "sa-token-storage-redis",
    "sa-token-storage-database",
    "sa-token-plugin-axum",
    "sa-token-plugin-actix-web",
    "sa-token-plugin-rocket",
    "sa-token-plugin-warp",
    "sa-token-plugin-poem",
]

# Examples are excluded from default workspace build to reduce warnings
# To build examples, use: 
#   cargo build -p axum-full-example
#   cargo build -p poem-full-example
exclude = [
    "examples/axum-full-example",
    "examples/poem-full-example",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["金书记"]
readme = "README.md"
repository = "https://github.com/your-username/sa-token-rust"
homepage = "https://github.com/your-username/sa-token-rust"
documentation = "https://docs.rs/sa-token-rust"
keywords = ["authentication", "authorization", "token", "security", "web"]
categories = ["authentication", "web-programming"]

[workspace.dependencies]
# 核心依赖
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0.12"
anyhow = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Token相关
uuid = { version = "1.6", features = ["v4", "serde"] }
jsonwebtoken = "9.2"

# 加密
sha2 = "0.10"
bcrypt = "0.15"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# Redis
redis = { version = "0.32.0", features = ["tokio-comp", "connection-manager"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web框架
axum = "0.8.4"
actix-web = "4.4"
rocket = "0.5"
warp = "0.3"
poem = "1.3"

# HTTP
http = "1.0"
tower = "0.5.2"
