[package]
name = "sa-token-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A powerful Rust authentication and authorization framework"

[dependencies]
sa-token-core = { version = "0.1.8", path = "./sa-token-core" }
sa-token-storage-memory = { version = "0.1.8", path = "./sa-token-storage-memory" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[[example]]
name = "event_listener_example"
path = "examples/event_listener_example.rs"

[[example]]
name = "jwt_example"
path = "examples/jwt_example.rs"

[[example]]
name = "token_styles_example"
path = "examples/token_styles_example.rs"

[[example]]
name = "security_features_example"
path = "examples/security_features_example.rs"

[[example]]
name = "oauth2_example"
path = "examples/oauth2_example.rs"

[[example]]
name = "websocket_online_example"
path = "examples/websocket_online_example.rs"

[[example]]
name = "distributed_session_example"
path = "examples/distributed_session_example.rs"

[[example]]
name = "sso_example"
path = "examples/sso_example.rs"

[workspace]
members = [
    "sa-token-core",
    "sa-token-adapter",
    "sa-token-macro",
    "sa-token-storage-memory",
    "sa-token-storage-redis",
    "sa-token-storage-database",
    "sa-token-plugin-axum",
    "sa-token-plugin-actix-web",
    "sa-token-plugin-rocket",
    "sa-token-plugin-warp",
    "sa-token-plugin-poem",
    "sa-token-plugin-salvo",
    "sa-token-plugin-tide",
    "sa-token-plugin-gotham",
    "sa-token-plugin-ntex",
]

# Examples are excluded from default workspace build to reduce warnings
# To build examples, use: 
#   cargo build -p axum-full-example
#   cargo build -p poem-full-example
#   cargo build -p actix-web-example
exclude = [
    "examples/axum-full-example",
    "examples/poem-full-example",
    "examples/actix-web-example",
]

resolver = "2"

[workspace.package]
version = "0.1.8"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["金书记"]
readme = "README.md"
repository = "https://github.com/llc-993/sa-token-rust"
homepage = "https://github.com/llc-993/sa-token-rust"
documentation = "https://docs.rs/sa-token-rust"
keywords = ["authentication", "authorization", "token", "security", "web"]
categories = ["authentication", "web-programming"]

[workspace.dependencies]
# 核心依赖
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0.12"
anyhow = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Token相关
uuid = { version = "1.6", features = ["v4", "serde"] }
jsonwebtoken = "9.2"

# 加密
sha2 = "0.10"
bcrypt = "0.17.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# Redis
redis = { version = "0.32.0", features = ["tokio-comp", "connection-manager"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP（通用）
http = "1.0"
tower = "0.5.2"

# URL
urlencoding = "2.1"

# 正则表达式
regex = "1.10"

[patch.crates-io]
sa-token-core = { path = "sa-token-core" }
sa-token-adapter = { path = "sa-token-adapter" }
sa-token-macro = { path = "sa-token-macro" }
sa-token-storage-memory = { path = "sa-token-storage-memory" }
sa-token-storage-redis = { path = "sa-token-storage-redis" }
sa-token-storage-database = { path = "sa-token-storage-database" }
sa-token-plugin-actix-web = { path = "sa-token-plugin-actix-web" }
sa-token-plugin-axum = { path = "sa-token-plugin-axum" }
sa-token-plugin-gotham = { path = "sa-token-plugin-gotham" }
sa-token-plugin-ntex = { path = "sa-token-plugin-ntex" }
sa-token-plugin-poem = { path = "sa-token-plugin-poem" }
sa-token-plugin-rocket = { path = "sa-token-plugin-rocket" }
sa-token-plugin-salvo = { path = "sa-token-plugin-salvo" }
sa-token-plugin-tide = { path = "sa-token-plugin-tide" }
sa-token-plugin-warp = { path = "sa-token-plugin-warp" }
