[package]
name = "sa-token-plugin-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Axum framework integration for sa-token-rust"

[dependencies]
sa-token-core = { version = "0.1.0", path = "../sa-token-core" }
sa-token-adapter = { version = "0.1.0", path = "../sa-token-adapter" }
tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = "2.1"
