[package]
name = "actix-web-example"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
redis = ["sa-token-plugin-actix-web/redis", "sa-token-storage-redis"]

[dependencies]
sa-token-plugin-actix-web = { path = "../../sa-token-plugin-actix-web", features = ["redis"] }
sa-token-storage-redis = { path = "../../sa-token-storage-redis", optional = true }

actix-web = "4.11.0"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.98"
urlencoding = "2.1.3"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
