[package]
name = "axum-full-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# sa-token 核心库
sa-token-core = { path = "../../sa-token-core" }
sa-token-storage-memory = { path = "../../sa-token-storage-memory" }
sa-token-plugin-axum = { path = "../../sa-token-plugin-axum" }
sa-token-macro = { path = "../../sa-token-macro" }

# Web 框架
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 其他
anyhow = "1.0"
