[package]
name = "poem-full-example"
version = "0.1.0"
edition = "2021"

[dependencies]
sa-token-core = { path = "../../sa-token-core" }
sa-token-plugin-poem = { path = "../../sa-token-plugin-poem" }
sa-token-storage-memory = { path = "../../sa-token-storage-memory" }
sa-token-macro = { path = "../../sa-token-macro" }
poem = "3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

